[package]
name = "terr"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Procedural terrain techniques"
keywords = ["procedural", "terrain"]
categories = ["algorithms", "game-engines"]


[dependencies]
nalgebra = "0.18"
ncollide3d = "0.19"
rand = "0.6"

[dev-dependencies]
kiss3d = "0.19"
