[package]
name = "terr"
version = "0.2.0"
edition = "2018"
authors = ["Diggory Hardy <git@dhardy.name>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dhardy/terr"
description = "Procedural terrain techniques"
# documentation = ""
keywords = ["procedural", "terrain"]
categories = ["algorithms", "game-engines"]

[badges]
travis-ci = { repository = "dhardy/terr" }

[dependencies]
nalgebra = "0.18"
ncollide3d = "0.19"
rand = "0.7"
rand_distr = "0.2.1"

[dev-dependencies]
kiss3d = "0.19"
